syntax = "proto3";

package village;

option go_package = "github.com/pokotsun/werewolf/grpc/village";

option java_multiple_files = true;
option java_package = "com.example.backendkotlin.generated.grpc";
option java_outer_classname = "VillageServiceProto";

// VillageService 定義
service VillageService {
  rpc CreateVillage(CreateVillageRequest) returns (CreateVillageResponse);
}

// VillageRequest メッセージ
message CreateVillageRequest {
  string name = 1;
  int32 user_number = 2;
}

// VillageResponse メッセージ
message CreateVillageResponse {
  string id = 1;
  string name = 2;
  int32 user_number = 3;
  string created_at = 4;
  string updated_at = 5;
}
